fix crash in sql plugin

FIXED-IN: 4.8.2
BUG: 296642